// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands npm login it should login a user with OTP setup 1`] = `
"{
  "npmRegistries": {
    "http://yarn.test.registry": {
      "npmAuthToken": "0d5165d0-aa93-599d-8ab8-326d64964a82"
    }
  }
}"
`;

exports[`Commands npm login it should login a user with OTP setup 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: Successfully logged in
",
}
`;

exports[`Commands npm login it should login a user with OTP to a specific scope 1`] = `
"{
  "npmScopes": {
    "testScope": {
      "npmAuthToken": "0d5165d0-aa93-599d-8ab8-326d64964a82",
      "npmRegistryServer": "http://yarn.test.registry"
    }
  }
}"
`;

exports[`Commands npm login it should login a user with OTP to a specific scope 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: Successfully logged in
",
}
`;

exports[`Commands npm login it should login a user with no OTP setup 1`] = `
"{
  "npmRegistries": {
    "http://yarn.test.registry": {
      "npmAuthToken": "9d33b95c-ac4d-5a16-a2d6-ae920e9da2f5"
    }
  }
}"
`;

exports[`Commands npm login it should login a user with no OTP setup 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: Successfully logged in
",
}
`;

exports[`Commands npm login it should login a user with no OTP setup to a specific scope 1`] = `
"{
  "npmScopes": {
    "testScope": {
      "npmAuthToken": "9d33b95c-ac4d-5a16-a2d6-ae920e9da2f5",
      "npmRegistryServer": "http://yarn.test.registry"
    }
  }
}"
`;

exports[`Commands npm login it should login a user with no OTP setup to a specific scope 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: Successfully logged in
",
}
`;

exports[`Commands npm login it should print the npm-notice when an OTP is requested 1`] = `
"{
  "npmRegistries": {
    "http://yarn.test.registry": {
      "npmAuthToken": "094e0159-1848-5629-90ec-879b4d1ce4d2"
    }
  }
}"
`;

exports[`Commands npm login it should print the npm-notice when an OTP is requested 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: You're looking handsome today

➤ YN0000: Successfully logged in
",
}
`;

exports[`Commands npm login it should store npmAlwaysAuth when passed as option 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Logging in to http://registry.example.org

➤ YN0000: Successfully logged in
",
}
`;
